<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:paddingRight="@dimen/gap_10_s"
android:descendantFocusability="blocksDescendants"
android:background="@android:color/white"
android:id="@+id/bask_soon_rl">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_toRightOf="@+id/bask_award_iv"
    android:layout_toLeftOf="@+id/bask_add_list_btn">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/award_name"
        android:id="@+id/bask_award_name_tv"
        android:textColor="@color/text_3_c"
        android:textSize="@dimen/text_13_s"
        android:ellipsize="end"
        android:maxLines="2"
        android:lineSpacingExtra="@dimen/gap_6_s"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/issue"
        android:id="@+id/bask_issue"
        android:paddingTop="@dimen/gap_10_s" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lucky_number"
        android:id="@+id/bask_lucky_number"
        android:paddingTop="@dimen/gap_10_s" />

</LinearLayout>

<ImageView
    android:layout_width="@dimen/award_height_s"
    android:layout_height="@dimen/view_100_s"
    android:id="@+id/bask_award_iv"
    android:layout_centerVertical="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:src="@mipmap/award_default_120"
    android:layout_marginRight="@dimen/gap_10_s"
    android:paddingTop="@dimen/gap_20_s"
    android:paddingBottom="@dimen/gap_20_s" />

<Button
    android:layout_width="@dimen/view_65_s"
    android:layout_height="@dimen/view_29_s"
    android:text="@string/bask_now"
    android:id="@+id/bask_add_list_btn"
    android:layout_centerVertical="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:background="@mipmap/inventory_btn"
    android:textSize="@dimen/text_13_s"
    android:textColor="@color/light_red"
    android:layout_marginLeft="@dimen/gap_12_s" />

</RelativeLayout>